Accessible focus not fired after dismissing OS open and save dialogs
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
People
(Reporter: elliottabarnes, Assigned: Jamie)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:71.0) Gecko/20100101 Firefox/71.0
Steps to reproduce:
To reproduce - tested with Firefox 71 X64 on Windows 7 with NVDA 2019.2.1 whilst performing all of the following with the keyboard:
-
With NVDA running, navigate to any web page that has a linked file, and place NVDA's focus on the link
-
Press shift + F10 to invoke the right-click context menu, and select "Save Link As..."
-
Select any location, and hit the "Save" button - this will close the "Save As" dialog, and return focus to the previous browser window
-
Finally, attempt to use the arrow keys to continue navigating the page content
Actual results:
When hitting any of the arrow keys after following the above steps, nothing happens - NVDA's focus doesn't move.
Expected results:
When pressing any of the cursor keys, NVDA should move around the page - as was possible before opening "Save As". The only way to force navigation is to either tab or shift tab.
Comment 1•5 years ago
|
||
Hi Elliot,
Thanks for the details. I was able to reproduce on Windows 10 pro, using NVDA 2019.2.1 , on the following versions
Firefox Nightly version74.0a1 (2020-01-07) (64-bit),
Beta 73.015 (64-bit)
Release 72.0 (64-bit)
This happens just the first time, correct? After forcing navigation with either tab or shift tab, and following the same steps, then it won't keep happening.
I've updated the component to Keyboard navigation so that the issue is reviewed by the development team. (If this is not the correct component feel free to change it for a more suitable one)
Best regards, Clara.
Comment 2•5 years ago
|
||
I can't seem to reproduce this on Ubuntu (i.e. no NVDA). Is this Windows-specific, or NVDA-specific? Moving to Disability Access for now.
| Reporter | ||
Comment 3•5 years ago
|
||
This is correct - using either tab/shift + tab restores navigation as expected.
Comment 4•5 years ago
|
||
The priority flag is not set for this bug.
:asa, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 5•5 years ago
|
||
This was fixed for the print dialog in bug 782547. I had hoped this would fix it for all OS modal dialogs, but apparently not.
It's likely that this will need to be fixed in the Windows widget code, but I'll put this in disability access APIs, since it only seems to hurt a11y.
| Assignee | ||
Comment 6•5 years ago
|
||
Oh. The reason is that blur events get suppressed for file chooser dialogs, but not print dialogs. That's why the original patch for bug 782547 removed the blur suppression code. That destabilised Flash for some reason (bug 782547 comment 11), so it got backed out. The patch recently landed did not remove the blur suppression code because it was suspected that this was the reason for the backout. I'm now not convinced this is true, since the only place this blur suppression code gets used is browser file chooser dialogs, not in the plugin support. Anyway, Flash on Youtube is no longer a thing.
The blur suppression code was originally added in bug 68454 to fix a crash when bringing up a file chooser dialog from the context menu on a window which calls self.close() on blur. However, Neil wasn't able to reproduce this crash any more with the blur suppression code removed (bug 782547 comment 5). I've likewise tested this and I can't reproduce it.
So, I think we should try removing this again.
| Assignee | ||
Comment 7•5 years ago
|
||
Suppressing blur events prevents accessibility from firing focus events correctly when dismissing file picker dialogs.
This code was originally added in bug 68454 to fix a crash when bringing up a file picker dialog from the context menu on a window which calls self.close() on blur.
However, this crash can no longer be reproduced, so the code isn't needed any more.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 9•5 years ago
|
||
| bugherder | ||
Comment 10•5 years ago
|
||
Is this something we should consider uplifting to Beta for 74 or can this fix ride 75 to release?
| Assignee | ||
Comment 11•5 years ago
|
||
I'd love to uplift it - it's a pretty annoying bug - but given that it touches Windows code that is 17 years old, I think we should let it bake for a while.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Reproduced the issue on Windows 10x64 with Firefox 73.0a1(20200103202240).
The issue is verified fixed with Firefox 75.0b7 (20200322132212) on Windows 10x64.
Updated•4 years ago
|
Description
•