Bug 1606932: Don't suppress blur events for file picker dialogs on Windows. r=NeilDeakin

Suppressing blur events prevents accessibility from firing focus events correctly when dismissing file picker dialogs.
This code was originally added in bug 68454 to fix a crash when bringing up a file picker dialog from the context menu on a window which calls self.close() on blur.
However, this crash can no longer be reproduced, so the code isn't needed any more.

Differential Revision: https://phabricator.services.mozilla.com/D62182

--HG--
extra : moz-landing-system : lando